--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/Kiro705/super-duel#readme",
   "dependencies": {
+    "@orange-games/phaser-input": "^2.0.5",
     "axios": "^0.17.0",
+    "babel-eslint": "^8.2.1",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
-    "@orange-games/phaser-input": "^2.0.5",
     "phaser": "^2.6.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
