--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@orange-games/phaser-input": "^2.0.5",
     "axios": "^0.17.0",
     "babel-eslint": "^8.2.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
     "pg": "^7.4.0",
