--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
+    "lodash": "^4.17.5",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "phaser": "^2.6.2",
